unpackaged/main/default/objects/Customer_Invoice__c/fields/Query_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Query_Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Query/Dispute</label>
    <type>Checkbox</type>
</CustomField>