unpackaged/main/default/objects/Customer_Invoice__c/fields/Query_Dispute_Date__c.field-meta.xml
<CustomField>
    <fullName>Query_Dispute_Date__c</fullName>
    <label>Query/Dispute Date</label>
    <type>Date</type>
</CustomField>