unpackaged/main/default/objects/Customer_Invoice__c/fields/Ready_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Send</label>
    <type>Checkbox</type>
</CustomField>