unpackaged/main/default/objects/Customer_Invoice__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Fetching Sector field value from Accounts Obj</description>
    <formula>TEXT(Account__r.Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>