unpackaged/main/default/objects/Customer_Invoice__c/fields/Sheriffs__c.field-meta.xml
<CustomField>
    <fullName>Sheriffs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sheriffs</label>
    <type>Checkbox</type>
</CustomField>