unpackaged/main/default/objects/Customer_Invoice__c/fields/Sherrifs_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sherrifs_Sent_Date__c</fullName>
    <label>Sherrifs Sent Date</label>
    <type>Date</type>
</CustomField>