unpackaged/main/default/objects/Customer_Invoice__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <formula>Job__r.Site__r.Site_Street__c &amp;&quot;, &quot;&amp; Job__r.Site__r.Site_PostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Address</label>
    <type>Text</type>
</CustomField>