unpackaged/main/default/objects/Customer_Invoice__c/fields/Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact__c</fullName>
    <formula>Job__r.Site__r.Primary_Site_Contact__r.FirstName&amp;&quot; &quot;&amp; Job__r.Site__r.Primary_Site_Contact__r.LastName</formula>
    <label>Site Contact</label>
    <type>Text</type>
</CustomField>