unpackaged/main/default/objects/Customer_Invoice__c/fields/Sum_of_chargebacks__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_chargebacks__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sum of chargebacks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>