unpackaged/main/default/objects/Customer_Invoice__c/fields/Sum_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Payments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated via a Flow due to lack of Master-Detail relationship between Customer Inv and Payment (managed package)</description>
    <inlineHelpText>Sum of the Payments for a Customer Invoice</inlineHelpText>
    <label>Sum of Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>