unpackaged/main/default/objects/Customer_Invoice__c/fields/Sum_of_Refunds__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Refunds__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of refunds in status &quot;refunded to customer&quot;</description>
    <label>Sum of Refunds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>