unpackaged/main/default/objects/Customer_Invoice__c/fields/T4A__c.field-meta.xml
<CustomField>
    <fullName>T4A__c</fullName>
    <label>T4A</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>