unpackaged/main/default/objects/Customer_Invoice__c/fields/T4B__c.field-meta.xml
<CustomField>
    <fullName>T4B__c</fullName>
    <label>T4B</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>