unpackaged/main/default/objects/Customer_Invoice__c/fields/T4C__c.field-meta.xml
<CustomField>
    <fullName>T4C__c</fullName>
    <label>T4C</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>