unpackaged/main/default/objects/Customer_Invoice__c/fields/T4D__c.field-meta.xml
<CustomField>
    <fullName>T4D__c</fullName>
    <label>T4D</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>