unpackaged/main/default/objects/Customer_Invoice__c/fields/T4E__c.field-meta.xml
<CustomField>
    <fullName>T4E__c</fullName>
    <label>T4E</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>