unpackaged/main/default/objects/Customer_Invoice__c/fields/T4F__c.field-meta.xml
<CustomField>
    <fullName>T4F__c</fullName>
    <label>T4F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>