unpackaged/main/default/objects/Customer_Invoice__c/fields/T5A__c.field-meta.xml
<CustomField>
    <fullName>T5A__c</fullName>
    <label>T5A</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>