unpackaged/main/default/objects/Customer_Invoice__c/fields/T5B__c.field-meta.xml
<CustomField>
    <fullName>T5B__c</fullName>
    <label>T5B</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>