unpackaged/main/default/objects/Customer_Invoice__c/fields/T5C__c.field-meta.xml
<CustomField>
    <fullName>T5C__c</fullName>
    <label>T5C</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>