unpackaged/main/default/objects/Customer_Invoice__c/fields/T5D__c.field-meta.xml
<CustomField>
    <fullName>T5D__c</fullName>
    <label>T5D</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>