unpackaged/main/default/objects/Customer_Invoice__c/fields/T5E__c.field-meta.xml
<CustomField>
    <fullName>T5E__c</fullName>
    <label>T5E</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>