unpackaged/main/default/objects/Customer_Invoice__c/fields/T5F__c.field-meta.xml
<CustomField>
    <fullName>T5F__c</fullName>
    <label>T5F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>