unpackaged/main/default/objects/Customer_Invoice__c/fields/T6A__c.field-meta.xml
<CustomField>
    <fullName>T6A__c</fullName>
    <label>T6A</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>