unpackaged/main/default/objects/Customer_Invoice__c/fields/T6B__c.field-meta.xml
<CustomField>
    <fullName>T6B__c</fullName>
    <label>T6B</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>