unpackaged/main/default/objects/Customer_Invoice__c/fields/T6C__c.field-meta.xml
<CustomField>
    <fullName>T6C__c</fullName>
    <label>T6C</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>