unpackaged/main/default/objects/Customer_Invoice__c/fields/T6D__c.field-meta.xml
<CustomField>
    <fullName>T6D__c</fullName>
    <label>T6D</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>