unpackaged/main/default/objects/Customer_Invoice__c/fields/T6E__c.field-meta.xml
<CustomField>
    <fullName>T6E__c</fullName>
    <label>T6E</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>