unpackaged/main/default/objects/Customer_Invoice__c/fields/T6F__c.field-meta.xml
<CustomField>
    <fullName>T6F__c</fullName>
    <label>T6F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>