unpackaged/main/default/objects/Customer_Invoice__c/fields/Trade_Group_lookup__c.field-meta.xml
<CustomField>
    <fullName>Trade_Group_lookup__c</fullName>
    <formula>Job__r.Trade_Group__c</formula>
    <label>Trade Group (lookup)</label>
    <type>Text</type>
</CustomField>