unpackaged/main/default/objects/Customer_Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Request from Delene to have it on Customer Invoice object authorised by Alex B</description>
    <formula>Job__r.Type__c</formula>
    <inlineHelpText>This is a Type on (Job) Reactive or Fixed Price</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>