unpackaged/main/default/objects/Customer_Invoice__c/recordTypes/Cancellation_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Cancellation_Invoice</fullName>
    <active>true</active>
    <label>Cancellation Invoice</label>
</RecordType>