unpackaged/main/default/objects/Customer_Invoice__c/recordTypes/Consolidated_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Consolidated_Invoice</fullName>
    <active>true</active>
    <label>Consolidated Invoice</label>
</RecordType>