unpackaged/main/default/objects/Customer_Invoice__c/recordTypes/Final.recordType-meta.xml
<RecordType>
    <fullName>Final</fullName>
    <active>true</active>
    <description>For Fixed Price Jobs</description>
    <label>Final</label>
</RecordType>