unpackaged/main/default/objects/Customer_Invoice__c/recordTypes/Reactive.recordType-meta.xml
<RecordType>
    <fullName>Reactive</fullName>
    <active>true</active>
    <description>For Reactive Jobs</description>
    <label>Reactive</label>
</RecordType>