unpackaged/main/default/objects/Customer_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sum_of_Payments__c</columns>
    <columns>Balance_Outstanding__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_Type__c</columns>
    <columns>PO_Number_for_Key_Accounts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Balance_Outstanding__c</field>
        <operation>greaterThan</operation>
        <value>GBP 0</value>
    </filters>
    <label>All</label>
</ListView>