unpackaged/main/default/objects/Customer_Invoice__c/listViews/Aug_Outstanding_Roofing_Multiskilled.listView-meta.xml
<ListView>
    <fullName>Aug_Outstanding_Roofing_Multiskilled</fullName>
    <columns>Job_Trade__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sum_of_Payments__c</columns>
    <columns>Balance_Outstanding__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Notes__c</columns>
    <columns>Account_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Job_Trade_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>3/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Balance_Outstanding__c</field>
        <operation>greaterThan</operation>
        <value>GBP 0</value>
    </filters>
    <filters>
        <field>Job_Trade_Category__c</field>
        <operation>contains</operation>
        <value>Roofing</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Invoice__c.Cancellation_Invoice,Customer_Invoice__c.Invoice</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Cash</value>
    </filters>
    <label>FEB Outstanding - Roofing/Multiskilled</label>
</ListView>