unpackaged/main/default/objects/Customer_Invoice__c/listViews/August.listView-meta.xml
<ListView>
    <fullName>August</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Job_Trade__c</columns>
    <columns>Sum_of_Payments__c</columns>
    <columns>Balance_Outstanding__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Charge_Net__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Authorised_FOC__c</columns>
    <columns>Payment_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/30/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Charge_Net__c</field>
        <operation>equals</operation>
        <value>GBP 0</value>
    </filters>
    <filters>
        <field>Authorised_FOC__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2021 12:00 AM</value>
    </filters>
    <label>August</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>