unpackaged/main/default/objects/Customer_Invoice__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Sum_of_Payments__c</columns>
    <columns>Balance_Outstanding__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Job_Trade_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>8/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Balance_Outstanding__c</field>
        <operation>notEqual</operation>
        <value>GBP 0</value>
    </filters>
    <filters>
        <field>Job_Trade_Category__c</field>
        <operation>contains</operation>
        <value>Roofing</value>
    </filters>
    <label>July Outstanding - Roofing/Multiskilled</label>
</ListView>