unpackaged/main/default/objects/Customer_Invoice__c/listViews/Copy_of_Unpaid_Invoices_All_Delene.listView-meta.xml
<ListView>
    <fullName>Copy_of_Unpaid_Invoices_All_Delene</fullName>
    <columns>Trade_Group_lookup__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Balance_Outstanding__c</columns>
    <columns>Count_of_Open_Cases__c</columns>
    <columns>Charge_Gross__c</columns>
    <columns>Job__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Payment_Notes__c</columns>
    <columns>Final_Notice_To_Be_Served__c</columns>
    <columns>Final_Notice_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Balance_Outstanding__c</field>
        <operation>greaterThan</operation>
        <value>GBP 0</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>cash,credit</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Invoice__c.Deposit</value>
    </filters>
    <filters>
        <field>Final_Notice_Sent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Final_Notice_To_Be_Served__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Final_Demand_Sent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Outstanding</value>
    </filters>
    <label>Deposit Invoices Outstanding</label>
</ListView>