unpackaged/main/default/objects/Customer_Invoice__c/listViews/Credit_Note.listView-meta.xml
<ListView>
    <fullName>Credit_Note</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>0120N000000okPm</value>
    </filters>
    <label>Credit Note</label>
</ListView>