unpackaged/main/default/objects/Customer_Invoice__c/listViews/Gas_invoices.listView-meta.xml
<ListView>
    <fullName>Gas_invoices</fullName>
    <columns>NAME</columns>
    <columns>Job_Trade_Category__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Job_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Trade_Category__c</field>
        <operation>equals</operation>
        <value>Roofing/Multiskilled</value>
    </filters>
    <label>Gas invoices</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>