unpackaged/main/default/objects/Customer_Invoice__c/listViews/July_Outstanding_Leak_detection.listView-meta.xml
<ListView>
    <fullName>July_Outstanding_Leak_detection</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sum_of_Payments__c</columns>
    <columns>Balance_Outstanding__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Notes__c</columns>
    <columns>Account_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Job_Trade_Category__c</columns>
    <columns>Card_On_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>3/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Balance_Outstanding__c</field>
        <operation>greaterThan</operation>
        <value>GBP 0</value>
    </filters>
    <filters>
        <field>Job_Trade_Category__c</field>
        <operation>contains</operation>
        <value>Leak detection</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Cash</value>
    </filters>
    <label>FEB Outstanding - Leak detection</label>
</ListView>